Release 0.4 -> Release 0.5

2001-07-22 Michael Still mikal@stillhq.com
	Chased memory leaks until blue in the face.

2002-01-07 Michael Still mikal@stillhq.com
	Fixed more memory leaks

2002-01-07 Michael Still mikal@stillhq.com
	Worked on generating the documentation as a single big PS or PDF file

2002-01-08 Michael Still mikal@stillhq.com
	Implemented the viewer preference functions in view.c... You can now hide the toolbar, the menubar, the view window user interface, and other cool things like that.

2002-01-09 Michael Still mikal@stillhq.com
	Implemented the rest of the page layout commands.

2002-01-10 Michael Still mikal@stillhq.com
	Implemented page durations. This doesn't work properly yet...

2002-01-12 Michael Still mikal@stillhq.com
	Implemented page transitions effects. There are now 17 page transition effects available if you wanted to build PDFs into presentations.

2002-01-24 Michael Still mikal@stillhq.com
	Finished implementing the new database style dictionary for objects... This is slightly slower than the in memory option, but can probably be sped up later on and is much nicer...